compiler/testData/diagnostics/tests/j+k/specialBuiltIns/hashtableInheritance.fir.kt
// FULL_JDK

<!ABSTRACT_CLASS_MEMBER_NOT_IMPLEMENTED!>class C1<!> : java.util.Hashtable<String, Int>()
<!ABSTRACT_CLASS_MEMBER_NOT_IMPLEMENTED!>class C2<!> : java.util.Hashtable<String, Int>() {
    override fun get(key: String) = 123
}
